#ifndef __INC_METIN_II_LENGTH_H__
#define __INC_METIN_II_LENGTH_H__

#include "service.h"
#include "protobuf_data_item.h"

// LOCALE
#define IGNORE_TRANSLATION_STRING "[NOTRANSLATION]"
#define IGNORE_TRANSLATION_STRING_LEN (sizeof(IGNORE_TRANSLATION_STRING) - 1)
// END_OF_LOCALE

#define WORD_MAX 0xffff
enum EMisc
{
	MAX_HOST_LENGTH			= 15,
	IP_ADDRESS_LENGTH		= 15,
	LOGIN_MAX_LEN			= 30,
	PASSWD_MAX_LEN			= 16,
	HWID_MAX_LEN			= 32,
#ifdef ACCOUNT_TRADE_BLOCK
	HWID2_MAX_LEN			= 50,
#endif
	PLAYER_PER_ACCOUNT		= 4,
	ACCOUNT_STATUS_MAX_LEN	= 8,
	CHARACTER_NAME_MAX_LEN	= 35,
	SHOP_SIGN_MAX_LEN		= 32,
	INVENTORY_PAGE_SIZE		= 45,
#ifdef PROMETA
	INVENTORY_PAGE_COUNT_MIN = 4,
	INVENTORY_PAGE_COUNT	= 10,
#elif defined(ELONIA)
	INVENTORY_PAGE_COUNT_MIN = 2,
	INVENTORY_PAGE_COUNT	= 4,
#else // Aeldra
	INVENTORY_PAGE_COUNT_MIN = 3,
	INVENTORY_PAGE_COUNT	= 5,
#endif
	MAP_ALLOW_LIMIT = 32,
	INVENTORY_MAX_NUM_MIN	= INVENTORY_PAGE_SIZE * INVENTORY_PAGE_COUNT_MIN,
	INVENTORY_MAX_NUM		= INVENTORY_PAGE_SIZE * INVENTORY_PAGE_COUNT,

#ifdef __SKILLBOOK_INVENTORY__
#ifdef ELONIA
	SKILLBOOK_INV_PAGE_COUNT= 2,
	SKILLBOOK_INV_MIN_PAGE_COUNT= 2,
#else
	SKILLBOOK_INV_PAGE_COUNT= 2,
	SKILLBOOK_INV_MIN_PAGE_COUNT= 2,
#endif
	SKILLBOOK_INV_PAGE_SIZE	= 5 * 10,
	SKILLBOOK_INV_MIN_NUM	= SKILLBOOK_INV_PAGE_SIZE * SKILLBOOK_INV_MIN_PAGE_COUNT,
	SKILLBOOK_INV_MAX_NUM	= SKILLBOOK_INV_PAGE_SIZE * SKILLBOOK_INV_PAGE_COUNT,
#endif

	UPPITEM_INV_PAGE_SIZE = 5 * 10,
#ifdef PROMETA
	UPPITEM_INV_PAGE_COUNT = 3,
	UPPITEM_INV_MIN_PAGE_COUNT = 3,
#elif defined(ELONIA)
	UPPITEM_INV_PAGE_COUNT = 4,
	UPPITEM_INV_MIN_PAGE_COUNT = 2,	
#else // AELDRA
	UPPITEM_INV_PAGE_COUNT = 5,
	UPPITEM_INV_MIN_PAGE_COUNT = 3,
#endif
	UPPITEM_INV_MIN_NUM = UPPITEM_INV_PAGE_SIZE * UPPITEM_INV_MIN_PAGE_COUNT,
	UPPITEM_INV_MAX_NUM = UPPITEM_INV_PAGE_SIZE * UPPITEM_INV_PAGE_COUNT,

#ifdef ELONIA
	STONE_INV_PAGE_COUNT = 2,
	STONE_INV_MIN_PAGE_COUNT = 2,
#else
	STONE_INV_PAGE_COUNT = 3,
	STONE_INV_MIN_PAGE_COUNT = 3,
#endif
	STONE_INV_PAGE_SIZE = 5 * 10,
	STONE_INV_MIN_NUM = STONE_INV_PAGE_SIZE * STONE_INV_MIN_PAGE_COUNT,
	STONE_INV_MAX_NUM = STONE_INV_PAGE_SIZE * STONE_INV_PAGE_COUNT,

#ifdef ELONIA
	ENCHANT_INV_PAGE_COUNT = 4,
	ENCHANT_INV_MIN_PAGE_COUNT = 2,
#else
	ENCHANT_INV_PAGE_COUNT = 3,
	ENCHANT_INV_MIN_PAGE_COUNT = 3,
#endif
	ENCHANT_INV_PAGE_SIZE = 5 * 10,
	ENCHANT_INV_MIN_NUM = ENCHANT_INV_PAGE_SIZE * ENCHANT_INV_MIN_PAGE_COUNT,
	ENCHANT_INV_MAX_NUM = ENCHANT_INV_PAGE_SIZE * ENCHANT_INV_PAGE_COUNT,

#ifdef __COSTUME_INVENTORY__
	COSTUME_INV_PAGE_SIZE = 5 * 10,
	COSTUME_INV_PAGE_COUNT = 3,
	COSTUME_INV_MAX_NUM = COSTUME_INV_PAGE_SIZE * COSTUME_INV_PAGE_COUNT,
#endif

	ABILITY_MAX_NUM			= 50,
	EMPIRE_MAX_NUM			= 4,
	SOCIAL_ID_MAX_LEN		= 18,

	GUILD_NAME_MAX_LEN		= 35,

	SHOP_HOST_ITEM_MAX_NUM	= 40,	/* 호스트의 최대 아이템 개수 */
	SHOP_GUEST_ITEM_MAX_NUM = 18,	/* 게스트의 최대 아이템 개수 */

	SHOP_PRICELIST_MAX_NUM	= 40,	///< 개인상점 가격정보 리스트에서 유지할 가격정보의 최대 갯수

	CHAT_MAX_LEN			= 512,

	QUICKSLOT_MAX_NUM		= 36,

	JOURNAL_MAX_NUM			= 2,

	QUERY_MAX_LEN			= 8192,

	FILE_MAX_LEN			= 128,

	PLAYER_EXP_TABLE_MAX	= 120,
	PLAYER_MAX_LEVEL_CONST	= 120,
#ifdef __ANIMAL_SYSTEM__
	ANIMAL_EXP_TABLE_MAX	= 25,
#endif
#ifdef __PRESTIGE__
	PRESTIGE_MAX_LEVEL		= 10,
#endif

	GUILD_MAX_LEVEL			= 20,
	MOB_MAX_LEVEL			= 100,

	ATTRIBUTE_MAX_VALUE		= 20,
	CHARACTER_PATH_MAX_NUM	= 64,
#ifdef MOB_SKILL_VNUM_FIX
	SKILL_MAX_NUM			= 255 * 2,
#else
	SKILL_MAX_NUM			= 255,
#endif
	SKILLBOOK_DELAY_MIN		= 64800,
	SKILLBOOK_DELAY_MAX		= 108000, 
	LEADERSHIP_DELAY		= 2 * 60 * 60,
#ifdef __LEGENDARY_SKILL__
	#ifdef ELONIA
	SKILL_MAX_LEVEL			= 40,
	#else
	SKILL_MAX_LEVEL			= 50,
	#endif
#else
	SKILL_MAX_LEVEL			= 40,
#endif

	APPLY_NAME_MAX_LEN		= 32,
	EVENT_FLAG_NAME_MAX_LEN = 32,

	MOB_SKILL_MAX_NUM		= 5,

    POINT_MAX_NUM = 255,
	
	MAX_AMOUNT_OF_MALL_BONUS	= 20,

	WEAR_MAX_NUM				= 32,

	SHINING_BODY_MAX = 2,
	SHINING_WEAPON_MAX = 2,
	SHINING_MAX_NUM = SHINING_BODY_MAX + SHINING_WEAPON_MAX,
	SHINING_RESERVED = 8,

	SOUL_TABLE_MAX_APPLY_COUNT = 4,

#ifdef __SKIN_SYSTEM__
	SKINSYSTEM_PET_MAX = 1,
	SKINSYSTEM_MOUNT_MAX = 1,
	SKINSYSTEM_BODY_MAX = 2,
	SKINSYSTEM_WEAPON_MAX = 2,
	SKINSYSTEM_HAIR_MAX = 1,
	SKINSYSTEM_MAX_NUM = SKINSYSTEM_PET_MAX + SKINSYSTEM_MOUNT_MAX + SKINSYSTEM_BODY_MAX + SKINSYSTEM_WEAPON_MAX + SKINSYSTEM_HAIR_MAX,
	SKINSYSTEM_RESERVED = 12,
#endif

	SHOP_TAB_NAME_MAX = 32,
	SHOP_TAB_COUNT_MAX = 3,
	SHOP_HOST_ALL_ITEM_MAX_NUM = SHOP_HOST_ITEM_MAX_NUM * SHOP_TAB_COUNT_MAX,

	MIN_ALIGNMENT = -20000,
	MAX_ALIGNMENT = 20000,

#ifdef __DRAGONSOUL__
	DRAGON_SOUL_BOX_SIZE = 32,
	DRAGON_SOUL_BOX_COLUMN_NUM = 8,
	DRAGON_SOUL_BOX_ROW_NUM = DRAGON_SOUL_BOX_SIZE / DRAGON_SOUL_BOX_COLUMN_NUM,
	DRAGON_SOUL_REFINE_GRID_SIZE = 15,
#endif

	HORSE_RAGE_MAX_LEVEL = 10,
	HORSE_MAX_RAGE = 1000,
	HORSE_DEC_RAGE_PER_TIME = 10,
	HORSE_BONUS_MAX_COUNT = 3,
	HORSE_MAX_BONUS_LEVEL = 6,
	
	HORSE_REFINE_BONUS = 0,
	HORSE_REFINE_RAGE = HORSE_REFINE_BONUS + HORSE_BONUS_MAX_COUNT,
	HORSE_REFINE_MAX_NUM,
	
#ifdef __GAYA_SYSTEM__
	GAYA_SHOP_MAX_NUM = 12,
#endif

#ifdef AHMET_FISH_EVENT_SYSTEM
	FISH_EVENT_SLOTS_NUM = 24,
	ITEM_FISH_EVENT_BOX = 25106,
	ITEM_FISH_EVENT_BOX_SPECIAL = 25107,
#endif
#ifdef ENABLE_ZODIAC_TEMPLE
	ANIMASPHERE_MAX = 99,
#endif
#ifdef __EQUIPMENT_CHANGER__
	EQUIPMENT_PAGE_NAME_MAX_LEN = 30,
	EQUIPMENT_CHANGER_MAX_PAGES = 10,
#endif
};

#ifdef __EQUIPMENT_CHANGER__
enum EquipChangerMisc {
	EQUIPMENT_CHANGER_WEAR_BODY,		// 0
	EQUIPMENT_CHANGER_WEAR_HEAD,		// 1
	EQUIPMENT_CHANGER_WEAR_FOOTS,		// 2
	EQUIPMENT_CHANGER_WEAR_WRIST,		// 3
	EQUIPMENT_CHANGER_WEAR_WEAPON,	// 4
	EQUIPMENT_CHANGER_WEAR_NECK,		// 5
	EQUIPMENT_CHANGER_WEAR_EAR,		// 6
	// EQUIPMENT_CHANGER_WEAR_UNIQUE1,	// 7
	// EQUIPMENT_CHANGER_WEAR_UNIQUE2,	// 8
	EQUIPMENT_CHANGER_WEAR_ARROW,		// 9
	EQUIPMENT_CHANGER_WEAR_SHIELD,	// 10
	// EQUIPMENT_CHANGER_WEAR_ABILITY1,  // 11
	// EQUIPMENT_CHANGER_WEAR_ABILITY2,  // 12
	// EQUIPMENT_CHANGER_WEAR_ABILITY3,  // 13
	// EQUIPMENT_CHANGER_WEAR_ABILITY4,  // 14
	// EQUIPMENT_CHANGER_WEAR_ABILITY5,  // 15
	// EQUIPMENT_CHANGER_WEAR_ABILITY6,  // 16
	// EQUIPMENT_CHANGER_WEAR_ABILITY7,  // 17
	// EQUIPMENT_CHANGER_WEAR_ABILITY8,  // 18
	EQUIPMENT_CHANGER_WEAR_COSTUME_BODY,	// 19
	EQUIPMENT_CHANGER_WEAR_COSTUME_HAIR,	// 20
	EQUIPMENT_CHANGER_WEAR_COSTUME_WEAPON,	// 21
	// EQUIPMENT_CHANGER_WEAR_RING1,			// 22	: 신규 반지슬롯1 (왼쪽)
	// EQUIPMENT_CHANGER_WEAR_RING2,			// 23	: 신규 반지슬롯2 (오른쪽)
#ifdef __ACCE_COSTUME__
	EQUIPMENT_CHANGER_WEAR_ACCE,			// 24
#endif
#ifdef __BELT_SYSTEM__
	EQUIPMENT_CHANGER_WEAR_BELT,			// 25
#endif
	// EQUIPMENT_CHANGER_WEAR_UNIQUE3,
	// EQUIPMENT_CHANGER_WEAR_UNIQUE4,
	EQUIPMENT_CHANGER_WEAR_TOTEM,
	// EQUIPMENT_CHANGER_WEAR_COSTUME_ACCE,
	EQUIPMENT_PAGE_MAX_PARTS,
};
#endif

enum EAlignGradeNames {
	ALIGN_KNIGHT = 0,
	ALIGN_LEGEND = 1,
	ALIGN_EXCELLENT = 2,
	ALIGN_POLICE = 3,
	ALIGN_GOOD3 = 4,
	ALIGN_GOOD2 = 5,
	ALIGN_GOOD1 = 6,
	ALIGN_NEUTRAL = 7,
	ALIGN_BAD1 = 8,
	ALIGN_BAD2 = 9,
	ALIGN_BAD3 = 10,
	ALIGN_VIOLENT = 11,
	ALIGN_BRUTALLY = 12,
	ALIGN_CRAZY = 13,
	ALIGN_HORRIBLE = 14,
	ALIGN_MAX_NUM,
};

#ifdef INCREASE_GOLD_MAX
	#define GOLD_MAX (GOLD_MAX_OWN)
#else
	#define GOLD_MAX (10000000000LL)
#endif

enum EWearPositions
{
	WEAR_BODY,		// 0
	WEAR_HEAD,		// 1
	WEAR_FOOTS,		// 2
	WEAR_WRIST,		// 3
	WEAR_WEAPON,	// 4
	WEAR_NECK,		// 5
	WEAR_EAR,		// 6
	WEAR_UNIQUE1,	// 7
	WEAR_UNIQUE2,	// 8
	WEAR_ARROW,		// 9
	WEAR_SHIELD,	// 10
    WEAR_ABILITY1,  // 11
    WEAR_ABILITY2,  // 12
    WEAR_ABILITY3,  // 13
    WEAR_ABILITY4,  // 14
    WEAR_ABILITY5,  // 15
    WEAR_ABILITY6,  // 16
    WEAR_ABILITY7,  // 17
    WEAR_ABILITY8,  // 18
	WEAR_COSTUME_BODY,	// 19
	WEAR_COSTUME_HAIR,	// 20
	WEAR_COSTUME_WEAPON,	// 21
	
	WEAR_RING1,			// 22	: 신규 반지슬롯1 (왼쪽)
	WEAR_RING2,			// 23	: 신규 반지슬롯2 (오른쪽)

#ifdef __ACCE_COSTUME__
	WEAR_ACCE,			// 24
#endif

#ifdef __BELT_SYSTEM__
	WEAR_BELT,			// 25
#endif

	WEAR_UNIQUE3,
	WEAR_UNIQUE4,

	WEAR_TOTEM,

	WEAR_COSTUME_ACCE,

	WEAR_MAX = 32	// 
};

#ifdef __SKIN_SYSTEM__
enum ESkinSystemSlots
{
	SKINSYSTEM_SLOT_PET = 74,
	SKINSYSTEM_SLOT_MOUNT = 75,
	SKINSYSTEM_SLOT_BUFFI_BODY = 76,
	SKINSYSTEM_SLOT_BUFFI_WEAPON = 77,
	SKINSYSTEM_SLOT_BUFFI_HAIR = 78,
};
#endif

#ifdef __DRAGONSOUL__
enum EDragonSoulDeckType
{
	DRAGON_SOUL_DECK_0,
	DRAGON_SOUL_DECK_1,
	DRAGON_SOUL_DECK_MAX_NUM = 2,

	DRAGON_SOUL_DECK_RESERVED_MAX_NUM = 3,	// NOTE: 중요! 아직 사용중이진 않지만, 3페이지 분량을 예약 해 둠. DS DECK을 늘릴 경우 반드시 그 수만큼 RESERVED에서 차감해야 함!
};
#endif

#ifdef AHMET_FISH_EVENT_SYSTEM
enum EFishEventInfo
{
	FISH_EVENT_SHAPE_NONE,
	FISH_EVENT_SHAPE_1,
	FISH_EVENT_SHAPE_2,
	FISH_EVENT_SHAPE_3,
	FISH_EVENT_SHAPE_4,
	FISH_EVENT_SHAPE_5,
	FISH_EVENT_SHAPE_6,
	FISH_EVENT_SHAPE_7,
	FISH_EVENT_SHAPE_MAX_NUM,
};
#endif

enum ESex
{
	SEX_MALE,
	SEX_FEMALE
};

enum EDirection
{
	DIR_NORTH,
	DIR_NORTHEAST,
	DIR_EAST,
	DIR_SOUTHEAST,
	DIR_SOUTH,
	DIR_SOUTHWEST,
	DIR_WEST,
	DIR_NORTHWEST,
	DIR_MAX_NUM
};

#define ABILITY_MAX_LEVEL	10  /* 기술 최대 레벨 */

enum EAbilityDifficulty
{
	DIFFICULTY_EASY,
	DIFFICULTY_NORMAL,
	DIFFICULTY_HARD,
	DIFFICULTY_VERY_HARD,
	DIFFICULTY_NUM_TYPES
};

enum EAbilityCategory
{
	CATEGORY_PHYSICAL,	/* 신체적 어빌리티 */
	CATEGORY_MENTAL,	/* 정신적 어빌리티 */
	CATEGORY_ATTRIBUTE,	/* 능력 어빌리티 */
	CATEGORY_NUM_TYPES
};

enum EJobs
{
	JOB_WARRIOR,
	JOB_ASSASSIN,
	JOB_SURA,
	JOB_SHAMAN,
#ifdef __WOLFMAN__
	JOB_WOLFMAN,
#endif
	JOB_MAX_NUM
};

enum ESkillGroups
{
	SKILL_GROUP_MAX_NUM = 2,
};

enum ERaceFlags
{
	RACE_FLAG_ANIMAL = (1 << 0),
	RACE_FLAG_UNDEAD = (1 << 1),
	RACE_FLAG_DEVIL = (1 << 2),
	RACE_FLAG_HUMAN = (1 << 3),
	RACE_FLAG_ORC = (1 << 4),
	RACE_FLAG_MILGYO = (1 << 5),
	RACE_FLAG_INSECT = (1 << 6),
	RACE_FLAG_DESERT = (1 << 7),
	RACE_FLAG_TREE = (1 << 8),
	RACE_FLAG_ELEC = (1 << 9),
	RACE_FLAG_WIND = (1 << 10),
	RACE_FLAG_EARTH = (1 << 11),
	RACE_FLAG_DARK = (1 << 12),
	RACE_FLAG_FIRE = (1 << 13),
	RACE_FLAG_ICE = (1 << 14),
	RACE_FLAG_ZODIAC = (1 << 15),
};

enum ELoads
{
	LOAD_NONE,
	LOAD_LIGHT,
	LOAD_NORMAL,
	LOAD_HEAVY,
	LOAD_MASSIVE
};

enum
{
	QUICKSLOT_TYPE_NONE,
	QUICKSLOT_TYPE_ITEM,
	QUICKSLOT_TYPE_SKILL,
	QUICKSLOT_TYPE_COMMAND,
	QUICKSLOT_TYPE_MAX_NUM,
};

enum EParts
{
	PART_MAIN,
	PART_WEAPON,
	PART_HEAD,
	PART_HAIR,
#ifdef __ACCE_COSTUME__
	PART_ACCE,
#endif

	PART_MAX_NUM,
	PART_WEAPON_SUB,
};

enum EChatType
{
	CHAT_TYPE_TALKING,	/* 그냥 채팅 */
	CHAT_TYPE_INFO,	/* 정보 (아이템을 집었다, 경험치를 얻었다. 등) */
	CHAT_TYPE_NOTICE,	/* 공지사항 */
	CHAT_TYPE_PARTY,	/* 파티말 */
	CHAT_TYPE_GUILD,	/* 길드말 */
	CHAT_TYPE_COMMAND,	/* 일반 명령 */
	CHAT_TYPE_SHOUT,	/* 외치기 */
	CHAT_TYPE_TEAM,
	CHAT_TYPE_WHISPER,
	CHAT_TYPE_BIG_NOTICE,
#ifdef ENABLE_ZODIAC_TEMPLE
	CHAT_TYPE_ZODIAC_NOTICE,
#endif
	CHAT_TYPE_MAX_NUM
};

enum EWhisperType
{
	WHISPER_TYPE_NORMAL			= 0,
	WHISPER_TYPE_NOT_LOGIN		= 1,
	WHISPER_TYPE_NOT_EXIST		= 2,
	WHISPER_TYPE_TARGET_BLOCKED	= 3,
	WHISPER_TYPE_SENDER_BLOCKED = 4,
	WHISPER_TYPE_NOAUTH			= 5,
	WHISPER_TYPE_ERROR			= 6,
	WHISPER_TYPE_GM				= 7,
	WHISPER_TYPE_SYSTEM			= 0xFF,
};

enum EGMLevels
{
	GM_PLAYER,
	GM_LOW_WIZARD,
	GM_WIZARD,
	GM_HIGH_WIZARD,
	GM_GOD,
	GM_IMPLEMENTOR,
	GM_MAX_NUM
};

enum EGMAllowFlags
{
	GM_ALLOW_DROP_ITEM = 1 << 0,
	GM_ALLOW_EXCHANGE_PLAYER_ITEM_TO_GM = 1 << 1,
	GM_ALLOW_EXCHANGE_PLAYER_ITEM_TO_PLAYER = 1 << 2,
	GM_ALLOW_EXCHANGE_GM_ITEM_TO_GM = 1 << 3,
	GM_ALLOW_EXCHANGE_GM_ITEM_TO_PLAYER = 1 << 4,
	GM_ALLOW_EXCHANGE_TO_GM = 1 << 5,
	GM_ALLOW_EXCHANGE_TO_PLAYER = 1 << 6,
	GM_ALLOW_BUY_PRIVATE_ITEM = 1 << 7,
	GM_ALLOW_CREATE_PRIVATE_SHOP = 1 << 8,
	GM_ALLOW_USE_SAFEBOX = 1 << 9,
	GM_ALLOW_CREATE_PLAYER = 1 << 10,
	GM_ALLOW_DELETE_PLAYER = 1 << 11,
};

enum EMobRank
{
	MOB_RANK_PAWN,
	MOB_RANK_S_PAWN,
	MOB_RANK_KNIGHT,
	MOB_RANK_S_KNIGHT,
	MOB_RANK_BOSS,
	MOB_RANK_KING,
	MOB_RANK_MAX_NUM
};

enum ECharType
{
	CHAR_TYPE_MONSTER,
	CHAR_TYPE_NPC,
	CHAR_TYPE_STONE,
	CHAR_TYPE_WARP,
	CHAR_TYPE_DOOR,
	CHAR_TYPE_BUILDING,
	CHAR_TYPE_PC,
	CHAR_TYPE_POLYMORPH_PC,
	CHAR_TYPE_GOTO,
	CHAR_TYPE_MOUNT,
	CHAR_TYPE_PET,
	CHAR_TYPE_FAKEBUFF,
};

enum EBattleType
{
	BATTLE_TYPE_MELEE,
	BATTLE_TYPE_RANGE,
	BATTLE_TYPE_MAGIC,
	BATTLE_TYPE_SPECIAL,
	BATTLE_TYPE_POWER,
	BATTLE_TYPE_TANKER,
	BATTLE_TYPE_SUPER_POWER,
	BATTLE_TYPE_SUPER_TANKER,
	BATTLE_TYPE_MAX_NUM
};

enum EApplyTypes
{
	APPLY_NONE,			// 0
	APPLY_MAX_HP,		// 1
	APPLY_MAX_SP,		// 2
	APPLY_CON,			// 3
	APPLY_INT,			// 4
	APPLY_STR,			// 5
	APPLY_DEX,			// 6
	APPLY_ATT_SPEED,	// 7
	APPLY_MOV_SPEED,	// 8
	APPLY_CAST_SPEED,	// 9
	APPLY_HP_REGEN,		// 10
	APPLY_SP_REGEN,		// 11
	APPLY_POISON_PCT,	// 12
	APPLY_STUN_PCT,		// 13
	APPLY_SLOW_PCT,		// 14
	APPLY_CRITICAL_PCT,		// 15
	APPLY_PENETRATE_PCT,	// 16
	APPLY_ATTBONUS_HUMAN,	// 17
	APPLY_ATTBONUS_ANIMAL,	// 18
	APPLY_ATTBONUS_ORC,		// 19
	APPLY_ATTBONUS_MILGYO,	// 20
	APPLY_ATTBONUS_UNDEAD,	// 21
	APPLY_ATTBONUS_DEVIL,	// 22
	APPLY_STEAL_HP,			// 23
	APPLY_STEAL_SP,			// 24
	APPLY_MANA_BURN_PCT,	// 25
	APPLY_DAMAGE_SP_RECOVER,	// 26
	APPLY_BLOCK,			// 27
	APPLY_DODGE,			// 28
	APPLY_RESIST_SWORD,		// 29
	APPLY_RESIST_TWOHAND,	// 30
	APPLY_RESIST_DAGGER,	// 31
	APPLY_RESIST_BELL,		// 32
	APPLY_RESIST_FAN,		// 33
	APPLY_RESIST_BOW,		// 34
	APPLY_RESIST_FIRE,		// 35
	APPLY_RESIST_ELEC,		// 36
	APPLY_RESIST_MAGIC,		// 37
	APPLY_RESIST_WIND,		// 38
	APPLY_REFLECT_MELEE,	// 39
	APPLY_REFLECT_CURSE,	// 40
	APPLY_POISON_REDUCE,	// 41
	APPLY_KILL_SP_RECOVER,	// 42
	APPLY_EXP_DOUBLE_BONUS,	// 43
	APPLY_GOLD_DOUBLE_BONUS,	// 44
	APPLY_ITEM_DROP_BONUS,	// 45
	APPLY_POTION_BONUS,		// 46
	APPLY_KILL_HP_RECOVER,	// 47
	APPLY_IMMUNE_STUN,		// 48
	APPLY_IMMUNE_SLOW,		// 49
	APPLY_IMMUNE_FALL,		// 50
	APPLY_SKILL,			// 51
	APPLY_BOW_DISTANCE,		// 52
	APPLY_ATT_GRADE_BONUS,	// 53
	APPLY_DEF_GRADE_BONUS,	// 54
	APPLY_MAGIC_ATT_GRADE,	// 55
	APPLY_MAGIC_DEF_GRADE,	// 56
	APPLY_CURSE_PCT,		// 57
	APPLY_MAX_STAMINA,		// 58
	APPLY_ATTBONUS_WARRIOR,	// 59
	APPLY_ATTBONUS_ASSASSIN,	// 60
	APPLY_ATTBONUS_SURA,	// 61
	APPLY_ATTBONUS_SHAMAN,	// 62
	APPLY_ATTBONUS_MONSTER,	// 63
	APPLY_MALL_ATTBONUS,			// 64 공격력 +x%
	APPLY_MALL_DEFBONUS,			// 65 방어력 +x%
	APPLY_MALL_EXPBONUS,			// 66 경험치 +x%
	APPLY_MALL_ITEMBONUS,			// 67 아이템 드롭율 x/10배
	APPLY_MALL_GOLDBONUS,			// 68 돈 드롭율 x/10배
	APPLY_MAX_HP_PCT,				// 69 최대 생명력 +x%
	APPLY_MAX_SP_PCT,				// 70 최대 정신력 +x%
	APPLY_SKILL_DAMAGE_BONUS,		// 71 스킬 데미지 * (100+x)%
	APPLY_NORMAL_HIT_DAMAGE_BONUS,	// 72 평타 데미지 * (100+x)%
	APPLY_SKILL_DEFEND_BONUS,		// 73 스킬 데미지 방어 * (100-x)%
	APPLY_NORMAL_HIT_DEFEND_BONUS,	// 74 평타 데미지 방어 * (100-x)%

	APPLY_EXTRACT_HP_PCT,			// 75 사용시 HP 소모

	APPLY_RESIST_WARRIOR,			// 76 무사에게 저항
	APPLY_RESIST_ASSASSIN,			// 77 자객에게 저항
	APPLY_RESIST_SURA,				// 78 수라에게 저항
	APPLY_RESIST_SHAMAN,			// 79 무당에게 저항
	APPLY_ENERGY,					// 80 기력
	APPLY_DEF_GRADE,				// 81 방어력. DEF_GRADE_BONUS는 클라에서 두배로 보여지는 의도된 버그(...)가 있다.
	APPLY_COSTUME_ATTR_BONUS,		// 82 코스튬 아이템에 붙은 속성치 보너스
	APPLY_MAGIC_ATTBONUS_PER,		// 83 마법 공격력 +x%
	APPLY_MELEE_MAGIC_ATTBONUS_PER,			// 84 마법 + 밀리 공격력 +x%
	
	APPLY_RESIST_ICE,		// 85 냉기 저항
	APPLY_RESIST_EARTH,		// 86 대지 저항
	APPLY_RESIST_DARK,		// 87 어둠 저항

	APPLY_ANTI_CRITICAL_PCT,	//88 크리티컬 저항
	APPLY_ANTI_PENETRATE_PCT,	//89 관통타격 저항

	APPLY_EXP_REAL_BONUS,	// 90

//#ifdef __ACCE_COSTUME__
	APPLY_ACCEDRAIN_RATE,		//91
//#endif

#ifdef __ANIMAL_SYSTEM__
#ifdef __PET_SYSTEM__
	APPLY_PET_EXP_BONUS,
#endif
	APPLY_MOUNT_EXP_BONUS,
#endif
	APPLY_MOUNT_BUFF_BONUS,				// 92

	APPLY_RESIST_MONSTER, // 93
	APPLY_ATTBONUS_METIN,// 
	APPLY_ATTBONUS_BOSS,// 95
	APPLY_RESIST_HUMAN,// 

	APPLY_RESIST_SWORD_PEN,// 97
	APPLY_RESIST_TWOHAND_PEN,// 
	APPLY_RESIST_DAGGER_PEN,// 99
	APPLY_RESIST_BELL_PEN,// 
	APPLY_RESIST_FAN_PEN,// 101
	APPLY_RESIST_BOW_PEN,// 
	APPLY_RESIST_ATTBONUS_HUMAN,// 103

//#ifdef __ELEMENT_SYSTEM__
	APPLY_ATTBONUS_ELEC,// 104
	APPLY_ATTBONUS_FIRE,// 105
	APPLY_ATTBONUS_ICE,//  106
	APPLY_ATTBONUS_WIND,// 107
	APPLY_ATTBONUS_EARTH,//108
	APPLY_ATTBONUS_DARK,// 109
//#endif

	APPLY_DEFENSE_BONUS, // 110

	APPLY_ANTI_RESIST_MAGIC, // 111

	APPLY_BLOCK_IGNORE_BONUS, // 112

//#ifdef ENABLE_RUNE_SYSTEM
	APPLY_RUNE_SHIELD_PER_HIT,
	APPLY_RUNE_HEAL_ON_KILL,
	APPLY_RUNE_BONUS_DAMAGE_AFTER_HIT,
	APPLY_RUNE_3RD_ATTACK_BONUS,
	APPLY_RUNE_FIRST_NORMAL_HIT_BONUS,
	APPLY_RUNE_MSHIELD_PER_SKILL,
	APPLY_RUNE_HARVEST,
	APPLY_RUNE_DAMAGE_AFTER_3,
	APPLY_RUNE_OUT_OF_COMBAT_SPEED,
	APPLY_RUNE_RESET_SKILL,
	APPLY_RUNE_COMBAT_CASTING_SPEED,
	APPLY_RUNE_MAGIC_DAMAGE_AFTER_HIT,
	APPLY_RUNE_MOVSPEED_AFTER_3,
	APPLY_RUNE_SLOW_ON_ATTACK,
//#endif
	APPLY_HEAL_EFFECT_BONUS,
	APPLY_CRITICAL_DAMAGE_BONUS,
	APPLY_DOUBLE_ITEM_DROP_BONUS,
	APPLY_DAMAGE_BY_SP_BONUS,
	APPLY_SINGLETARGET_SKILL_DAMAGE_BONUS,
	APPLY_MULTITARGET_SKILL_DAMAGE_BONUS,
	APPLY_MIXED_DEFEND_BONUS,
	APPLY_EQUIP_SKILL_BONUS,
	APPLY_AURA_HEAL_EFFECT_BONUS,
	APPLY_AURA_EQUIP_SKILL_BONUS,

//#ifdef ENABLE_RUNE_SYSTEM
	APPLY_RUNE_LEADERSHIP_BONUS,
	APPLY_RUNE_MOUNT_PARALYZE,

//	#ifdef RUNE_CRITICAL_POINT
		APPLY_RUNE_CRITICAL_PVM,
//	#endif

//#endif
	APPLY_ATTBONUS_ALL_ELEMENTS,
//#ifdef ENABLE_ZODIAC_TEMPLE
	APPLY_ATTBONUS_ZODIAC,
//#endif
	APPLY_BONUS_UPGRADE_CHANCE,
	APPLY_LOWER_DUNGEON_CD,
	APPLY_LOWER_BIOLOG_CD,

#ifdef __WOLFMAN__
	APPLY_BLEEDING_PCT,
	APPLY_BLEEDING_REDUCE,
	APPLY_ATTBONUS_WOLFMAN,
	APPLY_RESIST_WOLFMAN,
	APPLY_RESIST_CLAW,
#endif
	APPLY_RESIST_MAGIC_REDUCTION,
	
//#ifdef STANDARD_SKILL_DURATION
	APPLY_SKILL_DURATION,
//#endif
	APPLY_RESIST_BOSS,

	MAX_APPLY_NUM,
};

enum EOnClickEvents
{
	ON_CLICK_NONE,
	ON_CLICK_SHOP,
	ON_CLICK_TALK,
	ON_CLICK_MAX_NUM
};

enum EOnIdleEvents
{
	ON_IDLE_NONE,
	ON_IDLE_GENERAL,
	ON_IDLE_MAX_NUM
};

enum EWindows
{
	RESERVED_WINDOW,
	INVENTORY,
#ifdef __SKILLBOOK_INVENTORY__
	SKILLBOOK_INVENTORY,
#endif
#ifdef __DRAGONSOUL__
	DRAGON_SOUL_INVENTORY,
#endif
	EQUIPMENT,
	UPPITEM_INVENTORY,
	STONE_INVENTORY,
	SAFEBOX,
	MALL,
#ifdef __ACCE_COSTUME__
	ACCEREFINE,
#endif
#ifdef __GUILD_SAFEBOX__
	GUILD_SAFEBOX,
#endif
#ifdef AUCTION_SYSTEM
	AUCTION_SHOP,
	AUCTION,
#endif
	ENCHANT_INVENTORY,

#ifdef __COSTUME_INVENTORY__
	COSTUME_INVENTORY,
#endif

	RECOVERY_INVENTORY,
	GROUND,
	WINDOW_MAX_NUM,
};

enum EMobSizes
{
	MOBSIZE_RESERVED,
	MOBSIZE_SMALL,
	MOBSIZE_MEDIUM,
	MOBSIZE_BIG
};

enum EAIFlags
{
	AIFLAG_AGGRESSIVE	= (1 << 0),
	AIFLAG_NOMOVE	= (1 << 1),
	AIFLAG_COWARD	= (1 << 2),
	AIFLAG_NOATTACKSHINSU	= (1 << 3),
	AIFLAG_NOATTACKJINNO	= (1 << 4),
	AIFLAG_NOATTACKCHUNJO	= (1 << 5),
	AIFLAG_ATTACKMOB = (1 << 6 ),
	AIFLAG_BERSERK	= (1 << 7),
	AIFLAG_STONESKIN	= (1 << 8),
	AIFLAG_GODSPEED	= (1 << 9),
	AIFLAG_DEATHBLOW	= (1 << 10),
	AIFLAG_REVIVE		= (1 << 11),
};

enum EMobStatType
{
	MOB_STATTYPE_POWER,
	MOB_STATTYPE_TANKER,
	MOB_STATTYPE_SUPER_POWER,
	MOB_STATTYPE_SUPER_TANKER,
	MOB_STATTYPE_RANGE,
	MOB_STATTYPE_MAGIC,
	MOB_STATTYPE_MAX_NUM
};

enum EImmuneFlags
{
	IMMUNE_STUN		= (1 << 0),
	IMMUNE_SLOW		= (1 << 1),
	IMMUNE_FALL		= (1 << 2),
	IMMUNE_CURSE	= (1 << 3),
	IMMUNE_POISON	= (1 << 4),
	IMMUNE_TERROR	= (1 << 5),
	IMMUNE_REFLECT	= (1 << 6),
};

enum EMobEnchants
{
	MOB_ENCHANT_CURSE,
	MOB_ENCHANT_SLOW,
	MOB_ENCHANT_POISON,
	MOB_ENCHANT_STUN,
	MOB_ENCHANT_CRITICAL,
	MOB_ENCHANT_PENETRATE,
	MOB_ENCHANT_IGNORE_BLOCK,
	MOB_ENCHANTS_MAX_NUM
};

enum EMobResists
{
	MOB_RESIST_SWORD,
	MOB_RESIST_TWOHAND,
	MOB_RESIST_DAGGER,
	MOB_RESIST_BELL,
	MOB_RESIST_FAN,
	MOB_RESIST_BOW,
	MOB_RESIST_CLAW,
	MOB_RESIST_FIRE,
	MOB_RESIST_ELECT,
	MOB_RESIST_MAGIC,
	MOB_RESIST_WIND,
	MOB_RESIST_POISON,
	MOB_RESIST_BLEEDING,
	MOB_RESIST_EARTH,
	MOB_RESIST_ICE,
	MOB_RESIST_DARK,
	MOB_RESISTS_MAX_NUM
};

enum
{
	SKILL_ATTR_TYPE_NORMAL = 1,
	SKILL_ATTR_TYPE_MELEE,
	SKILL_ATTR_TYPE_RANGE,
	SKILL_ATTR_TYPE_MAGIC
		/*
		   SKILL_ATTR_TYPE_FIRE,
		   SKILL_ATTR_TYPE_ICE,
		   SKILL_ATTR_TYPE_ELEC,
		   SKILL_ATTR_TYPE_DARK,
		   */
};

enum
{
	SKILL_NORMAL,
	SKILL_MASTER,
	SKILL_GRAND_MASTER,
	SKILL_PERFECT_MASTER,
#ifdef __LEGENDARY_SKILL__
	SKILL_LEGENDARY_MASTER,
#endif
};

enum EGuildWarType
{
	GUILD_WAR_TYPE_FIELD,
	GUILD_WAR_TYPE_BATTLE,
	GUILD_WAR_TYPE_FLAG,
	GUILD_WAR_TYPE_MAX_NUM
};

enum EGuildWarState
{
	GUILD_WAR_NONE,
	GUILD_WAR_SEND_DECLARE,
	GUILD_WAR_REFUSE,
	GUILD_WAR_RECV_DECLARE,
	GUILD_WAR_WAIT_START,
	GUILD_WAR_CANCEL,
	GUILD_WAR_ON_WAR,
	GUILD_WAR_END,
	GUILD_WAR_OVER,
	GUILD_WAR_RESERVE,

	GUILD_WAR_DURATION = 30*60, // 1시간
	GUILD_WAR_WIN_POINT = 1000,
	GUILD_WAR_LADDER_HALF_PENALTY_TIME = 12*60*60,
};

enum EAttributeSet 
{            
	ATTRIBUTE_SET_WEAPON,
	ATTRIBUTE_SET_BODY, 
	ATTRIBUTE_SET_WRIST, 
	ATTRIBUTE_SET_FOOTS,
	ATTRIBUTE_SET_NECK,
	ATTRIBUTE_SET_HEAD,
	ATTRIBUTE_SET_SHIELD,
	ATTRIBUTE_SET_EAR,
	ATTRIBUTE_SET_TOTEM,
	ATTRIBUTE_SET_MAX_NUM
};  

enum EPrivType
{
	PRIV_NONE,
	PRIV_ITEM_DROP,
	PRIV_GOLD_DROP,
	PRIV_GOLD10_DROP,
	PRIV_EXP_PCT,
	PRIV_MOB_PCT,
	PRIV_STONE_PCT,
	PRIV_BOSS_PCT,
	MAX_PRIV_NUM,
};

enum EMoneyLogType
{
	MONEY_LOG_RESERVED,
	MONEY_LOG_MONSTER,
	MONEY_LOG_SHOP,
	MONEY_LOG_REFINE,
	MONEY_LOG_QUEST,
	MONEY_LOG_GUILD,
	MONEY_LOG_MISC,
	MONEY_LOG_MONSTER_KILL,
	MONEY_LOG_DROP,
	MONEY_LOG_TYPE_MAX_NUM,
};

enum EPremiumTypes
{
	PREMIUM_EXP,		// 경험치가 1.2배
	PREMIUM_ITEM,		// 아이템 드롭율이 2배
	PREMIUM_SAFEBOX,		// 창고가 1칸에서 3칸
	PREMIUM_AUTOLOOT,		// 돈 자동 줍기
	PREMIUM_FISH_MIND,		// 고급 물고기 낚일 확률 상승
	PREMIUM_MARRIAGE_FAST,	// 금실 증가 양을 빠르게합니다.
	PREMIUM_GOLD,		// 돈 드롭율이 1.5배
	PREMIUM_MAX_NUM = 9
};

enum SPECIAL_EFFECT
{
	SE_NONE,

	SE_HPUP_RED,
	SE_SPUP_BLUE,
	SE_SPEEDUP_GREEN,
	SE_DXUP_PURPLE,
	SE_CRITICAL,
	SE_PENETRATE,
	SE_BLOCK,
	SE_DODGE,
	SE_CHINA_FIREWORK,
	SE_SPIN_TOP,
	SE_SUCCESS,
	SE_FAIL,
	SE_FR_SUCCESS,
	SE_LEVELUP_ON_14_FOR_GERMANY,
	SE_LEVELUP_UNDER_15_FOR_GERMANY,
	SE_PERCENT_DAMAGE1,
	SE_PERCENT_DAMAGE2,
	SE_PERCENT_DAMAGE3,

	SE_AUTO_HPUP,
	SE_AUTO_SPUP,

	SE_EQUIP_RAMADAN_RING,		// 라마단 초승달의 반지(71135) 착용할 때 이펙트 (발동이펙트임, 지속이펙트 아님)
	SE_EQUIP_HALLOWEEN_CANDY,		// 할로윈 사탕을 착용(-_-;)한 순간에 발동하는 이펙트
	SE_EQUIP_HAPPINESS_RING,		// 크리스마스 행복의 반지(71143) 착용할 때 이펙트 (발동이펙트임, 지속이펙트 아님)
	SE_EQUIP_LOVE_PENDANT,		// 발렌타인 사랑의 팬던트(71145) 착용할 때 이펙트 (발동이펙트임, 지속이펙트 아님)

#ifdef __ACCE_COSTUME__
	SE_ACCE_SUCESS,
	SE_ACCE_EQUIP,
	SE_ACCE_BACK,
#endif

#ifdef __AGGREGATE_MONSTER_EFFECT__
	SE_AGGREGATE_MONSTER_EFFECT,
#endif

	SE_EFFECT_HEALER,

#ifdef COMBAT_ZONE
	SE_COMBAT_ZONE_POTION,
#endif

};

enum ELanguages {
	LANGUAGE_ENGLISH,
	LANGUAGE_GERMAN,
	LANGUAGE_TURKISH,
	LANGUAGE_ROMANIA,
	LANGUAGE_POLISH,
	LANGUAGE_ITALIAN,
	LANGUAGE_SPANISH,
	LANGUAGE_HUNGARIAN,
	LANGUAGE_CZECH,
	LANGUAGE_PORTUGUESE,
	LANGUAGE_FRENCH,
	LANGUAGE_ARABIC,
	LANGUAGE_GREEK,
	LANGUAGE_MAX_NUM,

	LANGUAGE_DEFAULT = LANGUAGE_GERMAN,
};

enum ETeenFlags
{
	TEENFLAG_NONE = 0,
	TEENFLAG_1HOUR,
	TEENFLAG_2HOUR,
	TEENFLAG_3HOUR,
	TEENFLAG_4HOUR,
	TEENFLAG_5HOUR,
};

#include "item_length.h"

// inventory의 position을 나타내는 구조체
// int와의 암시적 형변환이 있는 이유는,
// 인벤 관련된 모든 함수가 window_type은 받지 않고, cell 하나만 받았기 때문에,(기존에는 인벤이 하나 뿐이어서 inventory type이란게 필요없었기 때문에,)
// 인벤 관련 모든 함수 호출부분을 수정하는 것이 난감하기 떄문이다.

enum EDragonSoulRefineWindowSize
{
	DRAGON_SOUL_REFINE_GRID_MAX = 15,
};

enum EMisc2
{
	INVENTORY_SLOT_START,
	INVENTORY_SLOT_END = INVENTORY_SLOT_START + INVENTORY_MAX_NUM,

#ifdef __SKILLBOOK_INVENTORY__
	SKILLBOOK_INV_SLOT_START,
	SKILLBOOK_INV_SLOT_END = SKILLBOOK_INV_SLOT_START + SKILLBOOK_INV_MAX_NUM,
#endif

	UPPITEM_INV_SLOT_START,
	UPPITEM_INV_SLOT_END = UPPITEM_INV_SLOT_START + UPPITEM_INV_MAX_NUM,

	STONE_INV_SLOT_START,
	STONE_INV_SLOT_END = STONE_INV_SLOT_START + STONE_INV_MAX_NUM,

	ENCHANT_INV_SLOT_START,
	ENCHANT_INV_SLOT_END = ENCHANT_INV_SLOT_START + ENCHANT_INV_MAX_NUM,

#ifdef __COSTUME_INVENTORY__
	COSTUME_INV_SLOT_START,
	COSTUME_INV_SLOT_END = COSTUME_INV_SLOT_START + COSTUME_INV_MAX_NUM,
#endif

	EQUIPMENT_SLOT_START,
	EQUIPMENT_SLOT_END = EQUIPMENT_SLOT_START + WEAR_MAX_NUM,

#ifdef __DRAGONSOUL__
	DRAGON_SOUL_EQUIP_SLOT_START = EQUIPMENT_SLOT_END,
	DRAGON_SOUL_EQUIP_SLOT_END = DRAGON_SOUL_EQUIP_SLOT_START + ( DS_SLOT_MAX * DRAGON_SOUL_DECK_MAX_NUM ),
	DRAGON_SOUL_EQUIP_RESERVED_SLOT_END = DRAGON_SOUL_EQUIP_SLOT_END + ( DS_SLOT_MAX * DRAGON_SOUL_DECK_RESERVED_MAX_NUM ),

	SHINING_EQUIP_SLOT_START = DRAGON_SOUL_EQUIP_RESERVED_SLOT_END,
	SHINING_EQUIP_SLOT_END = SHINING_EQUIP_SLOT_START + SHINING_MAX_NUM,
	SHINING_EQUIP_RESERVED_SLOT_END = SHINING_EQUIP_SLOT_END + SHINING_RESERVED,
#else
	SHINING_EQUIP_SLOT_START = EQUIPMENT_SLOT_END,
	SHINING_EQUIP_SLOT_END = SHINING_EQUIP_SLOT_START + SHINING_MAX_NUM,
	SHINING_EQUIP_RESERVED_SLOT_END = SHINING_EQUIP_SLOT_END + SHINING_RESERVED,
#endif

#ifdef __SKIN_SYSTEM__
	SKINSYSTEM_EQUIP_SLOT_START = SHINING_EQUIP_RESERVED_SLOT_END,
	SKINSYSTEM_EQUIP_SLOT_END = SKINSYSTEM_EQUIP_SLOT_START + SKINSYSTEM_MAX_NUM,
	SKINSYSTEM_EQUIP_RESERVED_SLOT_END = SKINSYSTEM_EQUIP_SLOT_END + SKINSYSTEM_RESERVED,
	INVENTORY_AND_EQUIP_SLOT_MAX = SKINSYSTEM_EQUIP_RESERVED_SLOT_END,
#else
	INVENTORY_AND_EQUIP_SLOT_MAX = SHINING_EQUIP_RESERVED_SLOT_END,
#endif

};

#pragma pack(push, 1)

typedef struct SItemPos
{
	BYTE window_type;
	WORD cell;
    SItemPos ()
    {
        window_type = INVENTORY;
		cell = WORD_MAX;
    }

	SItemPos (BYTE _window_type, WORD _cell)
    {
        window_type = _window_type;
        cell = _cell;
    }

	SItemPos(const network::TItemPos& _cell)
	{
		window_type = _cell.window_type();
		cell = _cell.cell();
	}

	operator network::TItemPos() const
	{
		network::TItemPos ret;
		ret.set_window_type(window_type);
		ret.set_cell(cell);

		return ret;
	}

	bool IsValidItemPosition() const
	{
		switch (window_type)
		{
		case INVENTORY:
#ifdef __SKILLBOOK_INVENTORY__
		case SKILLBOOK_INVENTORY:
#endif
		case UPPITEM_INVENTORY:
		case STONE_INVENTORY:
		case ENCHANT_INVENTORY:
#ifdef __COSTUME_INVENTORY__
		case COSTUME_INVENTORY:
#endif
		case EQUIPMENT:
			return cell < INVENTORY_AND_EQUIP_SLOT_MAX;
#ifdef __DRAGONSOUL__
		case DRAGON_SOUL_INVENTORY:
			return cell < (DRAGON_SOUL_INVENTORY_MAX_NUM);
#endif
		}
		return false;
	}
	
	bool IsEquipPosition() const
	{
		if ((INVENTORY == window_type || EQUIPMENT == window_type) && cell >= EQUIPMENT_SLOT_START && cell < EQUIPMENT_SLOT_END)
			return true;

#ifdef __DRAGONSOUL__
		if (IsDragonSoulEquipPosition())
			return true;
#endif

		if (IsShiningEquipPosition())
			return true;

#ifdef __SKIN_SYSTEM__
		if(IsSkinSystemEquipPosition())
			return true;
#endif

		return false;
	}

#ifdef __DRAGONSOUL__
	bool IsDragonSoulEquipPosition() const
	{
		return (EQUIPMENT == window_type || INVENTORY == window_type) && (DRAGON_SOUL_EQUIP_SLOT_START <= cell) && (DRAGON_SOUL_EQUIP_SLOT_END > cell);
	}
#endif

	bool IsShiningEquipPosition() const
	{
		return (EQUIPMENT == window_type || INVENTORY == window_type) && (SHINING_EQUIP_SLOT_START <= cell) && (SHINING_EQUIP_SLOT_END > cell);
	}

	bool IsSkinSystemEquipPosition() const
	{
		return ( EQUIPMENT == window_type || INVENTORY == window_type ) && ( SKINSYSTEM_EQUIP_SLOT_START <= cell ) && ( SKINSYSTEM_EQUIP_SLOT_END > cell );
	}

	bool IsDefaultInventoryPosition() const
	{
		return INVENTORY == window_type && cell >= INVENTORY_SLOT_START && cell < INVENTORY_SLOT_END;
	}

	bool operator==(const struct SItemPos& rhs) const
	{
		return (window_type == rhs.window_type) && (cell == rhs.cell);
	}
	bool operator<(const struct SItemPos& rhs) const
	{
		return (window_type < rhs.window_type) || ((window_type == rhs.window_type) && (cell < rhs.cell));
	}
} TItemPos;

const TItemPos NPOS (RESERVED_WINDOW, WORD_MAX);

typedef enum
{
	SHOP_COIN_TYPE_GOLD, // DEFAULT VALUE
	SHOP_COIN_TYPE_SECONDARY_COIN,
	SHOP_COIN_TYPE_ITEM,
#ifdef COMBAT_ZONE
	SHOP_COIN_TYPE_COMBAT_ZONE,
#endif
} EShopCoinType;

#ifdef CHANGE_SKILL_COLOR
namespace ESkillColorLength
{
	enum ESkillColorLengt
	{
#ifdef __FAKE_BUFF__
		MAX_SKILL_COUNT = 9,
#else
		MAX_SKILL_COUNT = 6,
#endif
		MAX_EFFECT_COUNT = 5,
	};
}
#endif

#ifdef __ATTRTREE__
enum EAttrtreeData {
	ATTRTREE_ROW_NUM = 6,
	ATTRTREE_COL_NUM = 5,
	ATTRTREE_LEVEL_NUM = 5,
};
#endif

enum EAngelsDemonsFractions
{
	FRACTION_ANGELS = 1,
	FRACTION_DEMONS = 2,
};

enum ECardsEventType
{
	CARDS_EVENT_NORMAL = 1,
	CARDS_EVENT_HALLOWEEN = 2,
};

#ifdef COMBAT_ZONE
enum ECombatZoneGeneral
{
	COMBAT_ZONE_MAX_ROWS_RANKING = 10,
	COMBAT_ZONE_EMPTY_VALUE_ROW = 999,
	COMBAT_ZONE_TYPE_RANKING_WEEKLY = 1,
	COMBAT_ZONE_TYPE_RANKING_ALL = 2,
	COMBAT_ZONE_MAX_TOP_RANK = 3,	
	COMBAT_ZONE_CAN_START = 1,
	COMBAT_ZONE_CAN_FINISH = 2,	
	COMBAT_ZONE_INDEX_TARGET = 9999,
	COMBAT_ZONE_GET_POINTS = 1,
	COMBAT_ZONE_GET_RANK = 2,
	COMBAT_ZONE_MAX_POS_TELEPORT = 10,
	COMBAT_ZONE_SET_SKILL_MAX_LEVEL = 1,
	COMBAT_ZONE_GET_SKILL_BACK_BY_CACHE = 2,
	COMBAT_ZONE_ADD_LEAVING_TARGET = 1,
	COMBAT_ZONE_REMOVE_LEAVING_TARGET = 2,	
	COMBAT_ZONE_START_INFO_HOURS = 0,
	COMBAT_ZONE_START_INFO_MINUTES = 1,
	COMBAT_ZONE_DURATION = 2,
	COMBAT_ZONE_DIVIDE_NUM_POINTS = 2,
	COMBAT_ZONE_ADD_DEATHS_POINTS = 1,
	COMBAT_ZONE_MAX_ARGS = 4,
};
#endif

#ifdef __PET_ADVANCED__
constexpr auto PET_SKILL_NORMAL_START = 0;
constexpr auto PET_SKILL_HEROIC_START = 3;
constexpr auto PET_SKILL_MAX_NUM = 5;
constexpr auto PET_SKILL_MAX_LEVEL = 20;
constexpr auto PET_SKILL_HEROIC_MAX_LEVEL = 10;
constexpr auto PET_MAX_LEVEL = 105;
constexpr auto PET_ATTR_MAX_NUM = 3;
constexpr auto PET_ITEM_VALUE_VNUM = 0;
constexpr auto PET_HEROIC_GRADE_NAME = "heroic";
constexpr auto PET_SKILLPOWER_MAX = 100;
#endif

#pragma pack(pop)

#endif
